--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ li {
     padding: 0 10px;
 }
 
-a {
+a,
+.hero p {
     color: #E5E7EB;
     text-decoration: none;
     font-size: 18px;
@@ -40,4 +41,16 @@ a {
 .header-content {
     display: flex;
     justify-content: space-evenly;
+    margin: 50px 0;
+}
+
+.header-content img {
+    height: 350px;
+    width: auto;
+    margin-left: 50px;
+}
+
+.hero h1 {
+    font-size: 48px;
+    font-weight: 800;
 }
