--- a/style.css
+++ b/style.css
@@ -24,13 +24,17 @@ a,
 .footer {
     background-color: #1F2937;
     color: #FAF9F8;
-    padding: 10px 50px;
+}
+
+.header {
+    padding: 0 150px;
 }
 
 .header-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 2px solid red;
 }
 
 .logo {
@@ -40,14 +44,21 @@ a,
 
 .header-content {
     display: flex;
-    justify-content: space-evenly;
-    margin: 50px 0;
+    justify-content: center;
+    border: 2px solid green;
 }
 
 .header-content img {
-    height: 350px;
+    flex: 1;
+    height: 200px;
     width: auto;
     margin-left: 50px;
+    padding: 50px 0;
+}
+
+.hero {
+    flex: 1;
+    height: 400px;
 }
 
 .hero h1 {
