--- a/style.css
+++ b/style.css
@@ -65,3 +65,14 @@ a,
     font-size: 48px;
     font-weight: 800;
 }
+
+.header-button {
+    height: 35px;
+    width: 100px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 7px;
+    border: none;
+    font-weight: 600;
+    font-size: 14px;
+}
