--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a,
 .header,
 .footer {
     background-color: #1F2937;
-    color: #FAF9F8;
+    color: #F9FAF8;
 }
 
 .header {
@@ -34,7 +34,6 @@ a,
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 2px solid red;
 }
 
 .logo {
@@ -45,7 +44,6 @@ a,
 .header-content {
     display: flex;
     justify-content: center;
-    border: 2px solid green;
 }
 
 .header-content img {
