--- a/style.css
+++ b/style.css
@@ -100,3 +100,23 @@ a,
     border-radius: 15px;
 }
 
+.quote-container {
+    background-color: #E5E7EB;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote {
+    width: 600px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+}
+
+.quote-name {
+    text-align: end;
+    font-weight: 600;
+}
