--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ a,
     font-size: 18px;
 }
 
+/* Header bar */
 .header,
 .footer {
     background-color: #1F2937;
@@ -41,6 +42,7 @@ a,
     font-weight: 600;
 }
 
+/* Hero section */
 .header-content {
     display: flex;
     justify-content: center;
@@ -75,6 +77,7 @@ a,
     font-size: 14px;
 }
 
+/* Random information section */
 .information {
     text-align: center;
     margin-bottom: 100px;
@@ -100,6 +103,7 @@ a,
     border-radius: 15px;
 }
 
+/* Quote section */
 .quote-container {
     background-color: #E5E7EB;
     padding: 100px;
