--- a/style.css
+++ b/style.css
@@ -66,14 +66,18 @@ a,
     font-weight: 800;
 }
 
-.header-button {
+.header-button,
+.signup-button {
     height: 35px;
     width: 100px;
     background-color: #3882F6;
     color: #F9FAF8;
     border-radius: 7px;
-    border: none;
     font-weight: 600;
+}
+
+.header-button {
+    border: none;
     font-size: 14px;
 }
 
@@ -123,4 +127,38 @@ a,
 .quote-name {
     text-align: end;
     font-weight: 600;
+}
+
+/* Call to action section */
+.signup-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+
+.signup-box {
+    width: 50vw;
+    background: #3882F6;
+    padding: 30px;
+    border-radius: 8px;
+    color: #F9FAF8;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.signup-button {
+    border: 2px solid #F9FAF8;
+    font-size: 16px;
+}
+
+.call-to-action {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.signup-text p {
+    margin: 5px;
 }
