--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ a,
     font-size: 18px;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+}
+
 /* Header bar */
 .header,
 .footer {
@@ -48,12 +55,14 @@ a,
     justify-content: center;
 }
 
+.header-image {
+    max-height: 350px;
+    padding-left: 20px;
+}
+
 .header-content img {
     flex: 1;
-    height: 200px;
-    width: auto;
-    margin-left: 50px;
-    padding: 50px 0;
+    border-radius: 2px;
 }
 
 .hero {
@@ -101,9 +110,11 @@ a,
     max-width: 150px;
 }
 
-.image {
-    border: 3px solid #3882F6;
-    height: 130px;
+.image-container {
+    height: 140px;
+}
+
+.entry img {
     border-radius: 15px;
 }
 
