--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,300italic,300,100italic,100);
+
 body {
     font-family: "Roboto", sans-serif;
     height: 100vh;
@@ -30,7 +32,7 @@ img {
 /* Header bar */
 .header,
 .footer {
-    background-color: #1F2937;
+    background-color: rgb(51, 49, 47);
     color: #F9FAF8;
 }
 
@@ -79,7 +81,7 @@ img {
 .signup-button {
     height: 35px;
     width: 100px;
-    background-color: #3882F6;
+    background-color: rgb(137, 176, 166);
     color: #F9FAF8;
     border-radius: 7px;
     font-weight: 600;
@@ -120,7 +122,7 @@ img {
 
 /* Quote section */
 .quote-container {
-    background-color: #E5E7EB;
+    background-color: rgb(207, 204, 202);
     padding: 100px;
     display: flex;
     justify-content: center;
@@ -150,7 +152,7 @@ img {
 
 .signup-box {
     width: 50vw;
-    background: #3882F6;
+    background: rgb(137, 176, 166);
     padding: 30px;
     border-radius: 8px;
     color: #F9FAF8;
